# startin_wasm

./: .gitignore  Cargo.toml  README.md  index.html
pkg/: package.json  startin_wasm.d.ts  startin_wasm.js  startin_wasm_bg.wasm  startin_wasm_bg.wasm.d.ts
src/: lib.rs
www/: index.html  index.js  mystyle.css  package-lock.json  package.json
