[package]
name = "startin_wasm"
version = "0.6.0"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# startin = "0.7.0"
startin = { path = "../startin/" }
wasm-bindgen = "0.2.74"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

